# scanfinity

./: .env.example  .gitignore  README.md  __init__.py  docker-compose.yml  main.py  package-lock.json  puzzle.json  pyproject.toml  readme.md
backend/: requirements.txt
backend/app/: __init__.py  auth.py  db.py  dbtest.py  health.py  main.py  matchmaking.py  models.py  puzzle.py  register_user.py
backend/app/database/: __init__.py  connect.py  db.py  elo.py  game.py  lobbies.py  pool.py
backend/app/models/: __init__.py  dto.py  lobby.py  matchmaking_queue.py  models.py  puzzle.py
backend/app/routers/: auth.py  elo.py  email_verification.py  game.py  game_websocket.py  health.py  lobbies.py  matchmaking.py  register_user.py  users.py
backend/app/services/: email_sender.py  email_verification.py  matchmaking.py
frontend/: .gitignore  Dockerfile.frontend  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  translations.ts
frontend/app/auth/: page.tsx
frontend/app/components/: LanguageSwitcher.tsx
frontend/app/contexts/: LanguageContext.tsx  auth_context.tsx
frontend/app/game/: GameClient.tsx  page.tsx
frontend/app/hooks/: use_puzzle_data.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/lib/: device.ts  guest.ts
frontend/app/lobby/: page.tsx
frontend/app/login/: page.tsx
frontend/app/menu/: page.tsx
frontend/app/players/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/styles/: theme.ts
nginx/: nginx.conf
postgres/: scanfinity_db.sql
puzzlegen/: gen.py  puzzle.json  puzzle.py
(+27 files in other folders)
