[project]
name = "scanfinity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.135.2",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.3.0",
    "pydantic[email]>=2.12.5",
    "PyJWT>=2.12.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
    "dotenv>=0.9.9",
    "asyncpg>=0.31.0",
]
